--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#" onclick="falae()">Curiosidades</a>
+        <a href="#" onclick="falecomigo()">Fale Comigo</a>
     </nav>
+    <script>
+        function falecomigo() {
+            alert("Meu instagram está no final do site, estarei aguardando o contato!")
+        }
+        function falaae() {
+            alert("O que você gostaria de ver aqui? Me manda lá no instagram que está no fim da pagina!")
+        }
+    </script>
     <main>
         <article>
             <h1>História do Mascote do Android</h1>
