--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
             <aside>
                 <h3>Quer aprender mais?</h3>
-                <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a </p>
+                <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0</p>
                 <ul>
                     <li>1.5 - <abbr title="Bolo de Pote">Cupcake</abbr></li>
                     <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
